--- a/frontend/Track-my-spending/src/index.css
+++ b/frontend/Track-my-spending/src/index.css
@@ -17,3 +17,11 @@
         overflow-x: hidden;
     }
 }
+
+.input-box {
+    @apply w-full flex justify-between gap-3 text-sm text-black bg-slate-100 rounded px-4 py-3 mb-4 mt-3 border border-slate-200 outline-none;
+}
+
+.btn-blue-900{
+    @apply w-full text-sm font-medium text-white bg-blue-900 shadow-lg shadow-blue-900/5 p-[10px] rounded-md my-1 hover:bg-blue-900/15 hover:text-blue-900;
+}
