--- a/frontend/Track-my-spending/src/index.css
+++ b/frontend/Track-my-spending/src/index.css
@@ -25,3 +25,19 @@
 .btn-blue-900{
     @apply w-full text-sm font-medium text-white bg-blue-900 shadow-lg shadow-blue-900/5 p-[10px] rounded-md my-1 hover:bg-blue-900/15 hover:text-blue-900;
 }
+
+.card {
+    @apply bg-white p-6 rounded-2xl shadow-md shadow-gray-100 border border-gray-200/50;
+}
+
+.card-btn{
+    @apply flex items-center gap-3 text-[12px] font-medium text-gray-700 hover:text-blue-500 bg-gray-50 hover:bg-blue-50 px-4 py-1.5 rounded-lg border border-gray-200/50 cursor-pointer;
+}
+
+.add-btn{
+    @apply flex items-center gap-1.5 text-xs md:text-sm font-medium text-blue-600 whitespace-nowrap bg-blue-50 border border-blue-100 rounded-lg px-4 cursor-pointer; 
+}
+
+.add-btn-fill{
+    @apply text-white bg-blue-800;
+}
